model updated, check event trigger when set_values is called
